--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Arduino Arm Control</title>
-    <link rel='stylesheet' href='/css/style/css'>
+    <link rel='stylesheet' href='/css/style.css'>
 </head>
 <body>
 
@@ -12,11 +12,11 @@
         </div>
         <div class="shoulder-container">
             <h3>SHOULDER: </h3>
-            <input type="range" min="" max="" value="" name="" class="shoulder-slider slider">
+            <input type="range" min="90" max="120" value="90" name="" class="shoulder-slider slider">
         </div>
         <div class="elbow-container">
             <h3>ELBOW: </h3>
-            <input type="range" min="" max="" value="" name="" class="elbow-slider slider">
+            <input type="range" min="25" max="90" value="65" name="" class="elbow-slider slider">
         </div>
         <div class="wrist-container">
             <h3>WRIST: </h3>
@@ -24,7 +24,7 @@
         </div>
         <div class="claw-container">
             <h3>CLAW: </h3>
-            <input type="range" min="0" max="90" value="0" name="" class="claw-slider slider">
+            <input type="range" min="0" max="60" value="0" name="" class="claw-slider slider">
         </div>
     </div>
 
